# Scalable-Data-Ingestion-Pipeline

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  BENCHMARKS.md  Dockerfile  README.md  cli.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/: sample_events.ndjson  sample_orders.csv  sample_products.json
pipeline/: config.py  models.py  runner.py  scheduler.py  settings.py
pipeline/api/: app.py
pipeline/cleaning/: cleaner.py  validators.py
pipeline/ingestion/: api_ingester.py  base_ingester.py  csv_ingester.py  json_ingester.py  parquet_ingester.py
pipeline/loader/: db_loader.py
pipeline/quality/: profiler.py
pipeline/transformations/: __init__.py  transformer.py
pipeline/utils/: circuit_breaker.py  logger.py  metrics.py  retry.py  telemetry.py
scripts/: benchmark.py  generate_dataset.py  scale_test.py
sql/: analytics_queries.sql  schema.sql
tests/: conftest.py  test_api.py  test_api_ingester_extended.py  test_circuit_breaker.py  test_cleaning.py  test_ingestion.py  test_loader.py  test_logger_and_telemetry.py  test_parquet_ingester.py  test_pipeline_e2e.py  test_quality.py  test_retry.py  test_runner.py  test_runner_extended.py  test_settings.py  test_transformations.py  test_validators.py
